--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="mainueng.calorie.calories1.HistoryActivity">
+    tools:context="org.usablelabs.duedo.HistoryActivity">
 
     <CalendarView
         android:id="@+id/cvHistory"
